[tool.poetry]
name = "rogue-tutorial"
version = "0.1.0"
description = ""
authors = ["joeyviolacode <joeyviolacode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
tcod = "^16.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
